--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-	<title> TPE sur l'Intelligence Artificielle 2010-2011</title>
+	<title>TPE sur l'Intelligence Artificielle 2010-2011</title>
 	<link rel="stylesheet" href="style.css">
 	<meta charset="utf-8" />
 	</head>
@@ -10,24 +10,23 @@
 	<div class="conteneur">
 <!-- ------------------------------------------------------------------ Menu principal ------------------------------------------------------ -->
 		<div id="menu">
-
-<ul>
-<li class="tab"><a href="index.htm">Présentation du site</a></li>
-<li class="tab"><a href="page1.html">Introduction à l'IA</a></li>
-<li class="tab"><a href="page2.htm">Histoire et définition de l'IA</a></li>
-<li class="tab"><a href="page2bis.html">Fonctionnement de l'IA</a></li>
-	<ol>
-		<li>IA Forte</li>
-		<li>IA Faible</li>
-	</ol>
-<li class="tab"><a href="page3.html">Applications de l'IA</a></li>
-	<ol>
-		<li>Actuelles</li>
-		<li>Dans le Futur</li>
-	</ol>
-<li class="tab"><a href="page4.html">L'IA et l'éthique</a></li>
-<li class="tab"><a href="page5.html">L'art et l'IA</a></li>.
-</ul>
+			<ul>
+				<li class="tab"><a href="index.htm">Présentation du site</a></li>
+				<li class="tab"><a href="page1.html">Introduction à l'IA</a></li>
+				<li class="tab"><a href="page2.htm">Histoire et définition de l'IA</a></li>
+				<li class="tab"><a href="page2bis.html">Fonctionnement de l'IA</a></li>
+					<ol>
+						<li>IA Forte</li>
+						<li>IA Faible</li>
+					</ol>
+				<li class="tab"><a href="page3.html">Applications de l'IA</a></li>
+					<ol>
+						<li>Actuelles</li>
+						<li>Dans le Futur</li>
+					</ol>
+				<li class="tab"><a href="page4.html">L'IA et l'éthique</a></li>
+				<li class="tab"><a href="page5.html">L'art et l'IA</a></li>
+			</ul>
 		</div>
 	<br / clear="both">	
 
@@ -40,12 +39,8 @@
 			</center>
 		</h1>
 
-		<p>
-		Durant l'année de première, nous avons dû réaliser un TPE (Travail Personnel Encadré). Nous avons choisis l'Intelligence Artificielle.
-		</p>
-		<p>
-		Voici un petit aperçu de ce que nous avons appris !<br /> Avant toute chose voici  <a href="http://fr.wikipedia.org/wiki/Intelligence_artificielle">la définition donnée par Wikipédia</a>. Pour résumer, celle ci nous dit que l'intelligence artificielle est la somme de différents moyens grâce auxquels les ordinateur pourraient un jour penser.
-		</p>
+		<p>Durant l'année de première, nous avons dû réaliser un TPE (Travail Personnel Encadré). Nous avons choisis l'Intelligence Artificielle.</p>
+		<p>Voici un petit aperçu de ce que nous avons appris !<br /> Avant toute chose voici  <a href="http://fr.wikipedia.org/wiki/Intelligence_artificielle">la définition donnée par Wikipédia</a>. Pour résumer, celle ci nous dit que l'intelligence artificielle est la somme de différents moyens grâce auxquels les ordinateur pourraient un jour penser.</p>
 		<center><img src="images/shifumi_robot_homme.jpg" title="Un robot joue à papier caillou ciseau avec un homme" alt="Un robot joue à papier caillou ciseau avec un homme" /></center>
 		<br />
 		<p>
