--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 				<p>Durant l'année de première, nous avons dû réaliser un TPE (Travail Personnel Encadré). Nous avons choisis l'Intelligence Artificielle.</p>
 				<p>Voici un petit aperçu de ce que nous avons appris !<br /> Avant toute chose voici  <a href="http://fr.wikipedia.org/wiki/Intelligence_artificielle">la définition donnée par Wikipédia</a>. Pour résumer, celle ci nous dit que l'intelligence artificielle est la somme de différents moyens grâce auxquels les ordinateur pourraient un jour penser.</p>
-				<img src="images/shifumi_robot_homme.jpg" title="Un robot joue à papier caillou ciseau avec un homme" alt="Un robot joue à papier caillou ciseau avec un homme" />
+				<img src="http://placehold.it/960x140" title="Un robot joue à papier caillou ciseau avec un homme" alt="Un robot joue à papier caillou ciseau avec un homme" />
 				<p><small><u>Note:</u> Ce site est encore en construction, pour l'instant le fond est préféré à la forme.</small><a href="page1.html">Introduction</a></p>
 			</div>
 			<p class="construct">Site encore en construction</p>
